--- a/index.html
+++ b/index.html
@@ -552,20 +552,13 @@
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-<script type="text/javascript">
-    script = document.createElement('script')
-    script.src = 'https://pop-ups.sendpulse.com/assets/loader.js';
-    script.async = true;
-    script.setAttribute("data-chats-widget-id",'01abfa3e-1600-432b-b3df-a58fb9053282');
-    document.head.appendChild(script);
-    </script>
+
 
 <!-- custom js file link  -->
 <script src="js/typing.js"></script>
 <script src="js/script.js"></script>
 
-
-<script async src="https://pop-ups.sendpulse.com/assets/loader.js" data-chats-widget-id="01abfa3e-1600-432b-b3df-a58fb9053282"></script>
+<script src="https://cdn.pulse.is/livechat/loader.js" data-live-chat-id="64c56d6b002f2c995b00ca94" async></script>
 
 </body>
 </html>
