--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         <div id="animTextHolder">
             <!-- Sample slides for demonstration -->
             <div class="slide">
-                <p class="items_holder">Космонавт отчаянно тянется к кнопке, пока воздух покидает отсек. Шлюз захлопнулся, он слегка вздрогнул. Одна жизнь за три других. Выдох.</p>
+                <p class="items_holder">A tired sigh escapes me, not from lack of sleep but disappointment. Officer Dougher waves his fingers, gesturing for me to continue.</p>
             </div>
             <div class="slide">
-                <p class="items_holder"> viena kala buvo zmogus</p>
+                <p class="items_holder"> I think back to that day, so many years ago now.</p>
             </div>
             <div class="slide">
-                <p class="items_holder"> esu  kala buvo zmogus katialikas bus nieko bet mes zinome ki suo pakas tas i sk kaksdkd</p>
+                <p class="items_holder"> The day started bright and sunny, and like all the other kids who lived temporarily.</p>
+            </div>
+            <div class="slide">
+                <p class="items_holder"> He was tall. He spoke confidently and made fewer stupid jokes than the boys Ella.</p>
             </div>
             <!-- ... other slides ... -->
         </div>
