--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,9 +29,19 @@
             <div class="slide">
                 <p class="items_holder">He was tall. He spoke confidently and made fewer stupid jokes than the boys Ella.</p>
             </div>
+            <div class="slide">
+                <p class="items_holder">The day started bright and sunny, and like all the other kids who lived temporarily.</p>
+            </div>
+            <div class="slide">
+                <p class="items_holder">He was tall. He spoke confidently and made fewer stupid jokes than the boys Ella.</p>
+            </div>
             <!-- ... other slides ... -->
         </div>
+
     </div>
+
+    <div id="swipeIcon"></div>
+
 
     <script src="index.js"></script>
 </body>
