--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
             <!-- Sample slides for demonstration -->
             
             <div class="slide">
-                <p class="items_holder">A tired sigh escapes me, not from lack of sleep but disappointment. Officer Dougher waves his fingers, gesturing for me to continue.</p>
+                <p class="items_holder">Ваш баланс составляет $-567.072.565,13. Номер заблокирован. Вас ожидает 26 лет рабства на урановых рудниках</p>
             </div>
             <div class="slide">
-                <p class="items_holder">I think back to that day, so many years ago now.</p>
+                <p class="items_holder">Утренний лес летом зелен и звонок. Только по-прежнему пахнет жженой пластмассой… — Хватит, — с головы сорвали виртшлем. — Моя очередь смотреть природу!</p>
             </div>
             <div class="slide">
-                <p class="items_holder">The day started bright and sunny, and like all the other kids who lived temporarily.</p>
+                <p class="items_holder">Корабль, подлетающий к цели — Европе-6, был необычайно тих. Только робот-администратор повторял раз за разом: «Пробоина в третьем отсеке…</p>
             </div>
             <div class="slide">
-                <p class="items_holder">He was tall. He spoke confidently and made fewer stupid jokes than the boys Ella.</p>
+                <p class="items_holder">В парке он ежедневно кормил голубей. Но однажды прилетели лебеди. Его изумление было безмерным. Всё вокруг казалось иным.</p>
             </div>
             <div class="slide">
-                <p class="items_holder">The day started bright and sunny, and like all the other kids who lived temporarily.</p>
+                <p class="items_holder">В библиотеке мальчик каждую неделю брал одну и ту же книгу. Внутри - секретная запись. Игра между двумя друзьями началась.</p>
             </div>
             <div class="slide">
-                <p class="items_holder">He was tall. He spoke confidently and made fewer stupid jokes than the boys Ella.</p>
+                <p class="items_holder">Отец каждую ночь читал дочери сказку. Даже когда она выросла и уехала, его голос эхом звучал в её сердце.</p>
             </div>
             <!-- ... other slides ... -->
         </div>
