--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMt23cez/5paNdF+TmFE5o4z4Ck4SOF4y4Ck4SOF" crossorigin="anonymous">
+
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,6 +44,17 @@
     </div>
 
     <div id="swipeIcon"></div>
+    <div id="swipeIcon2"></div>
+
+    <div class="bottom-nav">
+        <button class="icon-button">
+            <i class="fas fa-thumbs-up"></i>
+        </button>
+        <a href="#" class="author-link">Check the author</a>
+        <button class="icon-button">
+            <i class="fas fa-share"></i>
+        </button>
+    </div>
     
 
 
