--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Text Animation</title>
+    <script src="https://code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
@@ -21,7 +22,12 @@
             <!-- Sample slides for demonstration -->
             
             <div class="slide">
+                <img src="https://cdn.pixabay.com/photo/2023/09/20/20/17/skyline-8265564_1280.jpg" alt="Description of Image 1">
                 <p class="items_holder">Ваш баланс составляет $-567.072.565,13. Номер заблокирован. Вас ожидает 26 лет рабства на урановых рудниках</p>
+            </div>
+            <div class="slide">
+                <img src="https://cdn.pixabay.com/photo/2023/10/04/14/15/building-8293793_1280.jpg" alt="Description of Image 1">
+                <p class="items_holder">Утренний лес летом зелен и звонок. Только по-прежнему пахнет жженой пластмассой… — Хватит, — с головы сорвали виртшлем. — Моя очередь смотреть природу!</p>
             </div>
             <div class="slide">
                 <p class="items_holder">Утренний лес летом зелен и звонок. Только по-прежнему пахнет жженой пластмассой… — Хватит, — с головы сорвали виртшлем. — Моя очередь смотреть природу!</p>
