--- a/index.html
+++ b/index.html
@@ -22,27 +22,48 @@
             <!-- Sample slides for demonstration -->
             
             <div class="slide">
-                <img src="https://cdn.pixabay.com/photo/2023/09/20/20/17/skyline-8265564_1280.jpg" alt="Description of Image 1">
-                <p class="items_holder">Ваш баланс составляет $-567.072.565,13. Номер заблокирован. Вас ожидает 26 лет рабства на урановых рудниках</p>
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHc03M07PGF4TbkGfMh9Tsv00NN2CuEvYsSuWQlEpBnJTvVrsUDFFQKmKVqoh05FzMsrQTBNdbz2oSiofSwJ6IbfBLSxvx3D9uK-ve9n7n0d8I3u4Mg=w2400" alt="Description of Image 1">
+                <p class="items_holder">Ваш баланс составляет $-567.072.565,13. Номер заблокирован. Вас ожидает 26 лет рабства на урановых рудниках.</p>
             </div>
             <div class="slide">
-                <img src="https://cdn.pixabay.com/photo/2023/10/04/14/15/building-8293793_1280.jpg" alt="Description of Image 1">
-                <p class="items_holder">Утренний лес летом зелен и звонок. Только по-прежнему пахнет жженой пластмассой… — Хватит, — с головы сорвали виртшлем. — Моя очередь смотреть природу!</p>
-            </div>
-            <div class="slide">
-                <p class="items_holder">Утренний лес летом зелен и звонок. Только по-прежнему пахнет жженой пластмассой… — Хватит, — с головы сорвали виртшлем. — Моя очередь смотреть природу!</p>
-            </div>
-            <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHdq1NT0JIomMHNLKcMXG46J7gfaEsuUU8F7E-FB6ebXSLv3Ic0DzO55mBWwALirAysbUoRXAyySbC9W6vGaDJf7Tyf3BVdBAmqUHmbeDxGkJksNAOw=w2400" alt="Description of Image 1">
                 <p class="items_holder">Корабль, подлетающий к цели — Европе-6, был необычайно тих. Только робот-администратор повторял раз за разом: «Пробоина в третьем отсеке…</p>
             </div>
             <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHdVaoj2SIYwbptrdtnrSNU7ZYuErBrxmsVaKsRpkK6fo3K_T4d7omhOTx0TupL_cgEZcDBkCiXX7bAk257ab73UJg3CfUhvweWrcSlhnKaJGRqh_C8=w2400" alt="Description of Image 1">
+                <p class="items_holder">Утренний лес летом зелен и звонок. Только по-прежнему пахнет жженой пластмассой… — Хватит, — с головы сорвали виртшлем. — Моя очередь смотреть природу!</p>
+            </div>
+            <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHfE0s-vh7f2JQAQ64J1Cf4a_5K_mjCmABU43MYKV78PaJ6n2_LbmdHTEdy6HbzmDW_KShZeZy5dniaD8nWgrVPTis-S4ZefONNcrrGrUc-GTbtBN8Q=w2400" alt="Description of Image 1">
+                <p class="items_holder">Среди городского хаоса, забытый дневник отдыхал на скамейке в парке, храня тайны запретной романтики.</p>
+            </div>
+            <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHfDHCEuZRl5lGVt09mFeoxZNeF_rQvkWy3a1umF4JluPj6Qspm0WX2uhVxH410WmEVpymDaZV09XCmbVGHHqExKNW-DELnwvQkJ-2rEnaO_2cqBVQE=w2400" alt="Description of Image 1">
                 <p class="items_holder">В парке он ежедневно кормил голубей. Но однажды прилетели лебеди. Его изумление было безмерным. Всё вокруг казалось иным.</p>
             </div>
             <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHcossOydWejGtTD4iynhV8mFhbtFJ5rPD9kk9w_0rhpnEv104fYsczBr8rEu8QJAzqDRa9QWzi4znMQgkvGGhV2lNOBTMxJ1fHxuiY5HtrxGsNKaFQ=w2400" alt="Description of Image 1">
                 <p class="items_holder">В библиотеке мальчик каждую неделю брал одну и ту же книгу. Внутри - секретная запись. Игра между двумя друзьями началась.</p>
             </div>
             <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHdH8PjOdNOPd-PzMEhG6DzLXix7BYZixeqNHVKWcdZR8MkFp2mJu4TBCnrIcPMLpWlgTG-6auTFESjRHwovfDfx6ZwlIELhg0jSXRqVEVgqWcMash4=w2400" alt="Description of Image 1">
                 <p class="items_holder">Отец каждую ночь читал дочери сказку. Даже когда она выросла и уехала, его голос эхом звучал в её сердце.</p>
+            </div>
+            <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHcXartzkMvwdIFeoTzCJJAVhDMzUOYz1rpL02TvESIZFLReth_0Xea2lV4YlTtCCTzj6ElzAc5cOIgLKpI7HoAHG2Bnpe4E8i7nTZaB9ryNCJLp00A=w2400" alt="Description of Image 1">
+                <p class="items_holder">В заброшенном особняке каждую ночь играл рояль. Там никто не жил уже десятилетия.</p>
+            </div>
+            <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHdf5HvAPiIha9AE5e033qPTB2Z9-KY50abSu9gZoqSLjcjaRFz7CTYKxluKUwzpm5ctIqBnB62rBogETWt7BxZJoMymVhq9rPeecVZJvuTyumDsLQQ=w2400" alt="Description of Image 1">
+                <p class="items_holder">Она танцевала одна под проливным дождем, и её слезы сливались с каплями, делая её горе неотличимым от природы.</p>
+            </div>
+            <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHf5zhDRPpkQGbouKXL1mK4hUcHnOfokrvX2-xCIZVmACzeFMsYoMsqvtj6nibZOMiwjzMa7Tg2hORS7bxtZQXtLMan7V69DV9rfAmK-0uHeI-b8JDo=w2400" alt="Description of Image 1">
+                <p class="items_holder">Когда он проходил через таинственный лес, все птицы и животные замолкали, ощущая в его присутствии следы далекого прошлого.</p>
+            </div>
+            <div class="slide">
+                <img src="https://lh3.googleusercontent.com/pw/ADCreHc9mqqc-1DTT8t6vps5cgSbLwOy82bH2NmvII6V2nzTPHDvFP_6JsOsku2NTTX9sz0Rg8ClSinGbflwAqHaLEfd0hZ8-xLRdP2D9q7h-n-80P5FSeE=w2400" alt="Description of Image 1">
+                <p class="items_holder">В разрушенном мире, где пустыни поглотили города, в музее под стеклом хранился последний цветок, символ забытой надежды.</p>
             </div>
             <!-- ... other slides ... -->
         </div>
