--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHc03M07PGF4TbkGfMh9Tsv00NN2CuEvYsSuWQlEpBnJTvVrsUDFFQKmKVqoh05FzMsrQTBNdbz2oSiofSwJ6IbfBLSxvx3D9uK-ve9n7n0d8I3u4Mg=w2400" alt="Description of Image 1">
-                <p class="items_holder">Ваш баланс составляет $-567.072.565,13. Номер заблокирован. Вас ожидает 26 лет рабства на урановых рудниках.</p>
+                <p class="items_holder">Your balance is $-567,072,565.13. The number is blocked. You are facing 26 years of servitude in uranium mines.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHdq1NT0JIomMHNLKcMXG46J7gfaEsuUU8F7E-FB6ebXSLv3Ic0DzO55mBWwALirAysbUoRXAyySbC9W6vGaDJf7Tyf3BVdBAmqUHmbeDxGkJksNAOw=w2400" alt="Description of Image 1">
-                <p class="items_holder">Корабль, подлетающий к цели — Европе-6, был необычайно тих. Только робот-администратор повторял раз за разом: «Пробоина в третьем отсеке…</p>
+                <p class="items_holder">The ship approaching the target — Europa-6, was unusually quiet. Only the robot-administrator kept repeating: "Breach in the third compartment…</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHdVaoj2SIYwbptrdtnrSNU7ZYuErBrxmsVaKsRpkK6fo3K_T4d7omhOTx0TupL_cgEZcDBkCiXX7bAk257ab73UJg3CfUhvweWrcSlhnKaJGRqh_C8=w2400" alt="Description of Image 1">
-                <p class="items_holder">Утренний лес летом зелен и звонок. Только по-прежнему пахнет жженой пластмассой… — Хватит, — с головы сорвали виртшлем. — Моя очередь смотреть природу!</p>
+                <p class="items_holder">The morning forest in summer is green and resonant. Yet it still smells of burnt plastic... 'Enough,' they took off the VR helmet from the head. 'It's my turn to watch nature!</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHfE0s-vh7f2JQAQ64J1Cf4a_5K_mjCmABU43MYKV78PaJ6n2_LbmdHTEdy6HbzmDW_KShZeZy5dniaD8nWgrVPTis-S4ZefONNcrrGrUc-GTbtBN8Q=w2400" alt="Description of Image 1">
