--- a/index.html
+++ b/index.html
@@ -33,39 +33,43 @@
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHfE0s-vh7f2JQAQ64J1Cf4a_5K_mjCmABU43MYKV78PaJ6n2_LbmdHTEdy6HbzmDW_KShZeZy5dniaD8nWgrVPTis-S4ZefONNcrrGrUc-GTbtBN8Q=w2400" alt="Description of Image 1">
-                <p class="items_holder">Среди городского хаоса, забытый дневник отдыхал на скамейке в парке, храня тайны запретной романтики.</p>
+                <p class="items_holder">Amidst the chaos of the city, a forgotten diary rested on a park bench, holding the secrets of a forbidden romance.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHfDHCEuZRl5lGVt09mFeoxZNeF_rQvkWy3a1umF4JluPj6Qspm0WX2uhVxH410WmEVpymDaZV09XCmbVGHHqExKNW-DELnwvQkJ-2rEnaO_2cqBVQE=w2400" alt="Description of Image 1">
-                <p class="items_holder">В парке он ежедневно кормил голубей. Но однажды прилетели лебеди. Его изумление было безмерным. Всё вокруг казалось иным.</p>
+                <p class="items_holder">In the park, he fed the pigeons every day. But one day the swans arrived. His amazement was immense. Everything around him seemed different.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHcossOydWejGtTD4iynhV8mFhbtFJ5rPD9kk9w_0rhpnEv104fYsczBr8rEu8QJAzqDRa9QWzi4znMQgkvGGhV2lNOBTMxJ1fHxuiY5HtrxGsNKaFQ=w2400" alt="Description of Image 1">
-                <p class="items_holder">В библиотеке мальчик каждую неделю брал одну и ту же книгу. Внутри - секретная запись. Игра между двумя друзьями началась.</p>
+                <p class="items_holder">At the library, the boy borrowed the same book every week. One day, inside was a secret note. The game between the two friends began.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHdH8PjOdNOPd-PzMEhG6DzLXix7BYZixeqNHVKWcdZR8MkFp2mJu4TBCnrIcPMLpWlgTG-6auTFESjRHwovfDfx6ZwlIELhg0jSXRqVEVgqWcMash4=w2400" alt="Description of Image 1">
-                <p class="items_holder">Отец каждую ночь читал дочери сказку. Даже когда она выросла и уехала, его голос эхом звучал в её сердце.</p>
+                <p class="items_holder">The father read his daughter a story every night. Even when she grew up and moved away, his voice echoed in her heart.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHcXartzkMvwdIFeoTzCJJAVhDMzUOYz1rpL02TvESIZFLReth_0Xea2lV4YlTtCCTzj6ElzAc5cOIgLKpI7HoAHG2Bnpe4E8i7nTZaB9ryNCJLp00A=w2400" alt="Description of Image 1">
-                <p class="items_holder">В заброшенном особняке каждую ночь играл рояль. Там никто не жил уже десятилетия.</p>
+                <p class="items_holder">In an abandoned mansion, a grand piano played every night. No one had lived there in decades.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHdf5HvAPiIha9AE5e033qPTB2Z9-KY50abSu9gZoqSLjcjaRFz7CTYKxluKUwzpm5ctIqBnB62rBogETWt7BxZJoMymVhq9rPeecVZJvuTyumDsLQQ=w2400" alt="Description of Image 1">
-                <p class="items_holder">Она танцевала одна под проливным дождем, и её слезы сливались с каплями, делая её горе неотличимым от природы.</p>
+                <p class="items_holder">She danced alone in the pouring rain, and her tears merged with the drops, making her grief indistinguishable from nature.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHf5zhDRPpkQGbouKXL1mK4hUcHnOfokrvX2-xCIZVmACzeFMsYoMsqvtj6nibZOMiwjzMa7Tg2hORS7bxtZQXtLMan7V69DV9rfAmK-0uHeI-b8JDo=w2400" alt="Description of Image 1">
-                <p class="items_holder">Когда он проходил через таинственный лес, все птицы и животные замолкали, ощущая в его присутствии следы далекого прошлого.</p>
+                <p class="items_holder">When he passed through the mysterious forest, all the birds and animals fell silent, sensing in his presence traces of the distant past.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHc9mqqc-1DTT8t6vps5cgSbLwOy82bH2NmvII6V2nzTPHDvFP_6JsOsku2NTTX9sz0Rg8ClSinGbflwAqHaLEfd0hZ8-xLRdP2D9q7h-n-80P5FSeE=w2400" alt="Description of Image 1">
-                <p class="items_holder">В разрушенном мире, где пустыни поглотили города, в музее под стеклом хранился последний цветок, символ забытой надежды.</p>
+                <p class="items_holder">In a shattered world where deserts have swallowed up cities, the last flower, a symbol of forgotten hope, was kept in a museum under glass.</p>
             </div>
             <!-- ... other slides ... -->
         </div>
 
+    </div>
+
+    <div id="guidelines">
+        Swipe
     </div>
 
     <script src="index.js"></script>
