--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
 </head>
 
 <body>
+
+    <header>
+        <div id="logo">Your Logo Here</div>
+        <button id="menuButton"><i class="fas fa-bars"></i></button>
+    </header>
+
+
     <div id="mainHolder">
         <div id="animTextHolder">
             <!-- Sample slides for demonstration -->
             
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHc03M07PGF4TbkGfMh9Tsv00NN2CuEvYsSuWQlEpBnJTvVrsUDFFQKmKVqoh05FzMsrQTBNdbz2oSiofSwJ6IbfBLSxvx3D9uK-ve9n7n0d8I3u4Mg=w2400" alt="Description of Image 1">
-                <p class="items_holder">Your balance is $-567,072,565.13. The number is blocked. You are facing 26 years of servitude in uranium mines.</p>
+                <p class="items_holder">The number is blocked. You are facing 26 years of servitude in uranium mines.</p>
             </div>
             <div class="slide">
                 <img src="https://lh3.googleusercontent.com/pw/ADCreHdq1NT0JIomMHNLKcMXG46J7gfaEsuUU8F7E-FB6ebXSLv3Ic0DzO55mBWwALirAysbUoRXAyySbC9W6vGaDJf7Tyf3BVdBAmqUHmbeDxGkJksNAOw=w2400" alt="Description of Image 1">
@@ -67,6 +74,8 @@
         </div>
 
     </div>
+
+
 
     <div id="guidelines">
         Swipe
