--- a/index.html
+++ b/index.html
@@ -20,19 +20,7 @@
 
         <div id="animTextHolder">
             <div class="slide">
-                <p class="items_holder">supernatural means the future course of events. The sorcerer, was frequently  </p>
-            </div>
-            <div class="slide">
-                <p class="items_holder">Jam nebutina buvo siekti kazko.</p>
-            </div>
-            <div class="slide">
-                <p class="items_holder">Ass zinau kad viskas glaivna id siandien bus kitaip.</p>
-            </div>
-            <div class="slide">
-                <p class="items_holder">Kodel tau ekasi o man ne mes gal busime kaagkas</p>
-            </div>
-            <div class="slide">
-                <p class="items_holder">Visas siandien pasakytas zodis bus panaudoanad ss</p>
+                <p class="items_holder">Enei vienuolika. Ji vėtoma ir mėtoma iš globos namų pas globėjus ir vėl į globos namus, kol vieną dieną atsiduria pas Hagenus. Ten viskas kitaip: didelis butas, nuosavas kambarys ir naujas mobilusis. Panašu, kad Hagenams ir naujam įbroliui ji tikrai patinka.</p>
             </div>
             <!-- Add more slides here -->
         </div>
