--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
         <div id="animTextHolder">
             <div class="slide">
-                <p class="items_holder">Enei vienuolika. Ji vėtoma ir mėtoma iš globos namų pas globėjus ir vėl į globos namus, kol vieną dieną atsiduria pas Hagenus. Ten viskas kitaip: didelis butas, nuosavas kambarys ir naujas mobilusis. Panašu, kad Hagenams ir naujam įbroliui ji tikrai patinka.</p>
+                <p class="items_holder">Enei vienuolika. Ji vėtoma ir mėtoma iš globos namų pas globėjus ir vėl į globos namus, kol vieną dieną atsiduria pas Hagenus. 
+                    Ten viskas kitaip: didelis butas, nuosavas kambarys ir naujas mobilusis. Panašu, kad Hagenams ir naujam įbroliui ji tikrai patinka.</p>
             </div>
             <!-- Add more slides here -->
         </div>
